--- a/vignettes/Inbred_Based_Populations.Rmd
+++ b/vignettes/Inbred_Based_Populations.Rmd
@@ -1418,7 +1418,7 @@ draw_map2(LG1_f2_final, LG2_f2_final, LG3_f2_final, main = "Only linkage informa
           group.names = c("LG1", "LG2", "LG3"), output = "map.png")
 ```
 
-<img src="map.png" width="400" height="400">
+<img src="map.png" width="300" height="400">
 
 You can include all `sequence` objects referring to the groups as the first arguments. The `main` argument define the main title of the draw and `group.names` define the names of each group. If no `output` file and file extension is defined, the draw will be generated at you working directory as `map.eps`. The eps extension is only the default option but there are others that can be used. You can have access to a list of them at the help page.
 
@@ -1491,7 +1491,7 @@ simParallel <- read_onemap("simParall_f2.raw")
 plot(simParallel)
 ```
 
-<img src="f2_img/plot.simParallel.jpg" width="500" height="400">
+<img src="f2_img/plot.simParallel.jpg" width="300" height="300">
 
 
 ```{r, eval=FALSE}
@@ -1504,10 +1504,8 @@ seq_all <- make_seq(twopts, "all")
 find_bins(simParallel)
 
 # There are no distorted markers
-p <- plot(test_segregation(simParallel))
+print(test_segregation(simParallel)) # Not shown
 ```
-
-<img src="f2_img/plot.segre.jpg" width="500" height="400">
 
 To prepare the data with defined bach size we use function `pick_batch_sizes`. It selects a batch size that splits the data into even groups. Argument `size` defines the  batch size next to which an optimum size will be searched. `overlap` defines the number of markers that overlap between present batch and next. This is used because pre-defined phases at these overlap markers in present batch are used to start the HMM in the next batch. The `around` argument defines how much the function can vary around the defined number in `size` to search for the optimum batch size.
 
