--- a/vignettes_highres/Outcrossing_Populations.Rmd
+++ b/vignettes_highres/Outcrossing_Populations.Rmd
@@ -1512,7 +1512,7 @@ draw_map2(LG1_final, LG2_final, LG3_final, main = "Only with linkage information
           group.names = c("LG1", "LG2", "LG3"), output = "map1.png")
 ```
 
-<img src="map1.png" width="300" height="500">
+<img src="map1.png" width="300" height="400">
 
 The figure will be saved in your work directory with the default name `map.eps`. You can change the file name and extension specifying them in the argument `output`.
 
@@ -1530,7 +1530,7 @@ draw_map2(CHR1_final, CHR2_final, CHR3_final, output= "map_ref.png",
           col.mark= "#335C81")
 ``` 
 
-<img src="map_ref.png" width="600" height="600">
+<img src="map_ref.png" width="300" height="300">
 
 With the argument `tag`, we can highlight some markers with other color. The arguments `col.group`, `col.mark` and `col.tag` can be changed to personalize the color of the groups, the markers, and the highlighted markers, respectively. 
 
@@ -1544,7 +1544,7 @@ draw_map2(LG1_final, CHR1_final, output = "map_comp.pdf", tag = c("M1","SNP2"))
 draw_map2(LG1_final, CHR1_final, output = "map_comp.png", tag = c("M1","SNP2"))
 ```
 
-<img src="map_comp.png" width="200" height="500">
+<img src="map_comp.png" width="200" height="400">
 
  When defining marker names in `tag` argument, all markers with these name will be highlighted no matter in which group it/they is/are.
 
@@ -1558,7 +1558,7 @@ draw_map2(LG2_final, CHR3_final, tag= c("SNP17", "SNP18", "M29"), main = "Chromo
           group.names = c("Only linkage", "With genome"), centered = TRUE, output = "map_comp2.png")
 ``` 
 
-<img src="map_comp2.png" width="200" height="500">
+<img src="map_comp2.png" width="200" height="400">
 
 # Map estimation for an arbitrary order
 
@@ -1684,7 +1684,8 @@ simParallel <- read_onemap("simParall_out.raw")
 plot(simParallel, all=FALSE)
 ```
 
-![](out_img/plot.simParallel.jpg)
+<img src="out_img/plot.simParallel.jpg" width="300" height="300">
+
 
 ```{r, eval=FALSE}
 # Calculates two-points recombination fractions
@@ -1699,7 +1700,7 @@ find_bins(simParallel)
 p <- plot(test_segregation(simParallel))
 ```
 
-![](out_img/plot.segre.jpg)
+<img src="out_img/plot.segre.jpg" width="300" height="300">
 
 To prepare the data with defined bach size we use function `pick_batch_sizes`. It selects a batch size that splits the data into even groups. Argument `size` defines the  batch size next to which an optimum size will be searched. `overlap` defines the number of markers that overlap between present batch and next. This is used because pre-defined phases at these overlap markers in present batch are used to start the HMM in the next batch. The `around` argument defines how much the function can vary around the defined number in `size` to search for the optimum batch size.
 
