--- a/vignettes/Outcrossing_Populations.Rmd
+++ b/vignettes/Outcrossing_Populations.Rmd
@@ -772,7 +772,6 @@ high capacity, we recommend using maximum of ten markers. **
 If you have more markers in your group, we suggest to use the following explained approaches
 `order_seq`.
 
-# Aqui
 In the example, 
 `LG3` contains only seven markers. Two of them are of type D1 and one are
 segregating in 3:1 fashion (type C). Thus, although the number 
@@ -854,7 +853,6 @@ If you change the `inter` argument to `TRUE`,  you should also specify a output 
 rf_graph_table(LG3_final, inter = TRUE, mrk.axis= "names", html.file = "LG3.html")
 ```
 
-#Aqui
 For example, passing on the cell corresponding to markers `8` and `13`, you can see their names (`M8` and `M13` ), types (`B3.7` and `C.8`), recombination fraction (`rf = 0.03`) and LOD Scores for each possible linkage phase. This is quite useful in helping to interpret the results.
 
 If you want to see corresponding marker numbers (not the names) in the axis just change the argument `mrk.axis` to `numbers`. It can make the next steps easier.
@@ -1136,9 +1134,10 @@ The function will provide a sequence with the same order of the estimated map (`
 Error in as_mapper(.f, ...) : argument ".f" is missing, with no default
 ```
 
-It's because the `map` function has a very common name and you can have in your environment other function with the same name. In the case of the pointed error, R is using `map` function from `purrr` package instead of `OneMap`, to solve this, simple specify that you want `OneMap` function:
+It's because the `map` function has a very common name and you can have in your environment other function with the same name. In the case of the pointed error, R is using `map` function from `purrr` package instead of `OneMap`, to solve this, simple specify that you want `OneMap` function with `::` command from `stringr` package:
 
 ```{r}
+library(stringr)
 (LG2_test_map <- onemap::map(LG2_test_seq))
 ```
 
@@ -1519,7 +1518,7 @@ draw_map2(LG1_final, LG2_final, LG3_final, main = "Only with linkage information
           group.names = c("LG1", "LG2", "LG3"), output = "map1.png")
 ```
 
-<img src="map1.png" width="300" height="500">
+<img src="map1.png" width="300" height="400">
 
 The figure will be saved in your work directory with the default name `map.eps`. You can change the file name and extension specifying them in the argument `output`.
 
@@ -1537,7 +1536,7 @@ draw_map2(CHR1_final, CHR2_final, CHR3_final, output= "map_ref.png",
           col.mark= "#335C81")
 ``` 
 
-<img src="map_ref.png" width="600" height="600">
+<img src="map_ref.png" width="300" height="300">
 
 With the argument `tag`, we can highlight some markers with other color. The arguments `col.group`, `col.mark` and `col.tag` can be changed to personalize the color of the groups, the markers, and the highlighted markers, respectively. 
 
@@ -1551,7 +1550,7 @@ draw_map2(LG1_final, CHR1_final, output = "map_comp.pdf", tag = c("M1","SNP2"))
 draw_map2(LG1_final, CHR1_final, output = "map_comp.png", tag = c("M1","SNP2"))
 ```
 
-<img src="map_comp.png" width="200" height="500">
+<img src="map_comp.png" width="200" height="400">
 
  When defining marker names in `tag` argument, all markers with these name will be highlighted no matter in which group it/they is/are.
 
@@ -1565,7 +1564,7 @@ draw_map2(LG2_final, CHR3_final, tag= c("SNP17", "SNP18", "M29"), main = "Chromo
           group.names = c("Only linkage", "With genome"), centered = TRUE, output = "map_comp2.png")
 ``` 
 
-<img src="map_comp2.png" width="200" height="500">
+<img src="map_comp2.png" width="200" height="400">
 
 # Map estimation for an arbitrary order
 
@@ -1587,9 +1586,10 @@ any_seq <- make_seq(twopts, c(30, 12, 3, 14, 2))
 Error in as_mapper(.f, ...) : argument ".f" is missing, with no default
 ```
 
-It's because the `map` function has a very common name and you can have in your environment other function with the same name. In the case of the pointed error, R is using `map` function from `purrr` package instead of `OneMap`, to solve this, simple specify that you want `OneMap` function:
+It's because the `map` function has a very common name and you can have in your environment other function with the same name. In the case of the pointed error, R is using `map` function from `purrr` package instead of `OneMap`, to solve this, simple specify that you want `OneMap` function with `::` command from `stringr` package::
 
 ```{r, eval=FALSE}
+library(stringr)
 (any_seq_map <- onemap::map(any_seq))
 ```
 
@@ -1691,7 +1691,8 @@ simParallel <- read_onemap("simParall_out.raw")
 plot(simParallel, all=FALSE)
 ```
 
-![](out_img/plot.simParallel.jpg)
+<img src="out_img/plot.simParallel.jpg" width="300" height="300">
+
 
 ```{r, eval=FALSE}
 # Calculates two-points recombination fractions
@@ -1706,7 +1707,7 @@ find_bins(simParallel)
 p <- plot(test_segregation(simParallel))
 ```
 
-![](out_img/plot.segre.jpg)
+<img src="out_img/plot.segre.jpg" width="300" height="300">
 
 To prepare the data with defined bach size we use function `pick_batch_sizes`. It selects a batch size that splits the data into even groups. Argument `size` defines the  batch size next to which an optimum size will be searched. `overlap` defines the number of markers that overlap between present batch and next. This is used because pre-defined phases at these overlap markers in present batch are used to start the HMM in the next batch. The `around` argument defines how much the function can vary around the defined number in `size` to search for the optimum batch size.
 
@@ -2060,5 +2061,3 @@ species. **_Theoretical Population Biology_** 61, 349-363, 2002a.
 
 Wu, R., Ma, C.-X., Wu, S. S. and Zeng, Z.-B. Linkage mapping of
 sex-specific differences. **_Genetical Research_** 79, 85-96, 2002b.
-
-
