--- a/vignettes/Outcrossing_Populations.Rmd
+++ b/vignettes/Outcrossing_Populations.Rmd
@@ -2016,6 +2016,50 @@ plot(progeny_haplot, position = "stack")
 plot(progeny_haplot, position = "split")
 ```
 
+## Comparing estimated and simulated haplotypes
+
+The simulations here included are very useful to test our algorithms efficiency, we made them available in case to be useful for other purposes. Using functions `run_pedsim`, `pedsim2vcf` with argument phased `TRUE` we can convert the phased VCF using `vcf2progeny_haplotypes`, which keeps the original haplotype. With that we can compare the haplotypes simulated and the ones estimated by the onemap approach.
+
+Here we will use the file `sim_out_cod_genotypes.dat` to get one phased VCF. See that now we don't want to simulate read counts or genotype errors, we just want the original haplotypes in VCF format, then we set `counts = FALSE` and don't need to define the related arguments.
+
+```{r}
+pedsim2vcf(inputfile = system.file("extdata/sim_cod_out_genotypes.dat", package = "onemap"),
+           map.file = system.file("extdata/mapfile_out.txt", package = "onemap"), 
+           chrom.file = system.file("extdata/sim_out.chrom", package = "onemap"), 
+           out.file = "simu_out_phased.vcf",
+           miss.perc = 0, 
+           counts = FALSE, 
+           chr.mb = 10,
+           pos="cM",
+           chr=NULL,
+           phase = TRUE)
+```
+
+Now, we can convert the phased VCF to onemap_progeny_haplotypes object using function `vcf2progeny_haplotypes`. The position, the group names and individuals id will be according with the ones contained in VCF file. This function can take some time to run if you select too many individuals or groups.
+
+```{r}
+vcfR.object <- read.vcfR("simu_out_phased.vcf")
+
+progeny_dat <- vcf2progeny_haplotypes(vcfR.object = vcfR.object, ind.id = c("F1_004", "F1_005"), group_names = "Chr1", parent1 = "P1", parent2 = "P2", crosstype = "outcross")
+plot(progeny_dat)
+```
+
+This is the simulated dataset. If OneMap algorithm could get all information needed, it could reproduce this haplotypes exactly how they were in simulated data. Let's see how OneMap estimate these haplotypes:
+
+```{r}
+onemap_test <- onemap_read_vcfR(vcfR.object = vcfR.object, cross = "outcross", parent1 = "P1", parent2 = "P2", only_biallelic = FALSE)
+
+onemap_test # Just to remember of which dataset we are talking about
+
+twopts <- rf_2pts(onemap_test)
+seq1 <- make_seq(twopts, "all")
+map_test <- map(seq1)
+progeny_est <- progeny_haplotypes(map_test, ind = c(4,5), most_likely = FALSE)
+plot(progeny_est)
+```
+
+See that, besides markers are not in their exactly position, the recombination break points are the same as the ones simulated. The marker position could only be exactly the same as the ones simulated if we have a very big (or maybe infinite) population size, but here we have only 200 individuals, but this is not a problem once we could reproduce the haplotypes.
+
 # Session Info
 
 ```{r}
